Fix clipping on parallax

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,7 +9,7 @@
 }
 
 .christmas-bg {
-  width: 100%;
+  width: 120%;
   height: 225px;
   object-fit: cover;
 }
